Chess Club/src/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Games__c</fullName>
        <label>Games</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Losses__c</fullName>
        <formula>Games__c -  Wins__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Losses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Player__c</fullName>
        <label>Meeting Player</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Meeting__c.Type__c</field>
                <operation>notEqual</operation>
                <value>Committee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wins__c</fullName>
        <label>Wins</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Attendance</label>
    <nameField>
        <displayFormat>AC-{0}</displayFormat>
        <label>Attendance#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>